--- a/LoLympics/Info.plist
+++ b/LoLympics/Info.plist
@@ -38,9 +38,11 @@
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fbapi</string>
+        <string>fb</string>
 		<string>fb-messenger-api</string>
 		<string>fbauth2</string>
 		<string>fbshareextension</string>
+        <string>twitter</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
